# langchain-course

./: ingestion.py  main.py  medium.txt  pyproject.toml  schemas.py
backend/: core.py
